[project]
name = "robotframework-schemathesislibrary"
version = "2.3.3"
description = "Robot Framework SchemathesisLibrary to automatically create test cases from API specifications."
authors = [
  { name="Tatu Aalto", email="aalto.tatu@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.1"
keywords = ["Robot Framework", "Schemathesis", "API Testing", "Test Automation"]
dependencies = [
    "robotframework>=7.2.2",
    "robotframework-datadriver>=1.11.2",
    "robotframework-pythonlibcore>=4.6.0",
    "schemathesis>=4.21.10",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "fastapi[standard]>=0.138.0",
    "invoke>=3.0.3",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "robotframework-requests>=0.9.7",
    "robotframework-robocop>=8.3.2",
    "ruff==0.15.18",
]

[tool.semantic_release.settings]
allow_zero_version = true

[tool.robocop.format]
overwrite = true
color = false
diff = false

configure = [
    "OrderTags.enabled=True",
    "NormalizeAssignments.equal_sign_type=space_and_equal_sign",
    "RenameKeywords.enabled=True",
    "RenameTestCases.enabled=True",
    "RenameVariables.enabled=True",
    "ReplaceWithVAR.enabled=True",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "FAST",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "T10",
    "EXE",
    "FIX",
    "ISC",
    "ICN",
    "LOG",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "NPY",
    "PD",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY"
]

ignore = [
    "ANN401",
    "E501",
    "TRY003",
    "N999",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
files = "src/SchemathesisLibrary"
